# schema-check-lambda-function

./: pyproject.toml
.github/workflows/: deploy.yml
src/schema_check_lambda_function/: __init__.py
